bk_ida/gccida/g1/reload_inner_reg_of_subreg
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_inner_reg_of_subreg/src/reload.c:1259:41: error: must use 'enum' tag to refer to type 'machine_mode'
int  reload_inner_reg_of_subreg( rtx x, machine_mode mode) 
                                        ^
                                        enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_inner_reg_of_subreg/src/reload.c:1278:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v4.rtwint = ( __int64)x->fld[0]; 
                      ^~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_inner_reg_of_subreg/src/reload.c:1306:26: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v15 = ( ( unsigned int)( mode_class_0[v11] - 5) < 2) + 1; 
                         ^~~~~~~~~~~~
                         mode_class
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_inner_reg_of_subreg/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_inner_reg_of_subreg/src/obj/reload.o] Error 1
